Citations in conclusion and hero

--- a/index.html
+++ b/index.html
@@ -210,14 +210,28 @@
       </div>
       <div class="statement" id="graph2020">
         <p>
-          Hero ~ increase in special effects?
+          From animated movies to science fiction, heroes have been rising in the past
+          decade as depicted by the Top Keywords. With the rise of cutting-edge special effects,
+          the spectacular scenes that allow to escape your own world, and fans of the comic-books,
+          it is no surprise that super heroes movies have become increasingly popular.
         </p>
       </div>
       <div class="statement">
-        q
+        <p>
+          However, there may be a more discrete reasoning behind the rise of super hero movies.
+          Dark events in U.S. history such as 9/11 and the House Market Crash could have influenced
+          the population towards hero movies. Although they were popular beforehand,
+          the reality of the situation could have pushed people towards the sense
+          of comfort that super heroes can bring.
+        </p>
       </div>
       <div class="statement">
-          q
+          <p>
+            Finally, the rise of computers and special effects, have added layers of
+            excitement as movies have become more realistic and believable. The growth in
+            technology in the past years has been exponential, and leaves us curious for the future
+            of the cinema.
+          </p>
       </div>
     </div>
   </div>
@@ -236,7 +250,13 @@
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
+    Citations:
+    https://en.wikipedia.org/wiki/Sergio_Leone
+    https://en.wikipedia.org/wiki/Spaghetti_Western
+    https://en.wikipedia.org/wiki/Harry_Potter
+    https://www.nyfa.edu/student-resources/the-rise-of-superhero-films/
+    http://highschool.latimes.com/orange-county-school-of-the-arts/post-911-world-what-caused-the-rise-of-superhero-movies/  
+  </div>
     <div class="summary-container">
       <div class="summary-item" onclick="returnToDecade(1950)">
         <svg id="summ-1950" width="100%" height="100%"></svg>
