Adjusted centering technique, edited intro, and added conclusion.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
       <h1>Movie Night</h1>
       <div id="intro_text">
         <span>
-          In this visualization, we explore the ties of time with movie popularity and characteristics to find a relationship
-          between what makes a movie successful, and how our taste changes through time can influence the movies that are considered well-done. 
-          As we travel through each decade, play close attention to which movies are considered similar to each other, the top
-          three keywords for each decade, the top rated movies, and the way the clusters of data form. 
-          Enjoy the show!
+          In this visualization, we explore the relationship of movies through time. By considering popularity and a subset of movie features, we learn more about what makes a movie successful and how our taste might change through time. As we travel through each decade, play close attention to which movies are considered similar to each other, the top three keywords describing the movies for that decade, and the way the clusters of data form. Enjoy the show!
         </span>
       </div>
     </div>
@@ -202,22 +198,17 @@
   <div id="conclusion_container"> 
     <div id="summary-text"> 
       <h1>Conclusion</h1>
-      ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Citations:
-      https://en.wikipedia.org/wiki/Sergio_Leone
-      https://en.wikipedia.org/wiki/Spaghetti_Western
-      https://en.wikipedia.org/wiki/Harry_Potter
-      https://www.nyfa.edu/student-resources/the-rise-of-superhero-films/
-      http://highschool.latimes.com/orange-county-school-of-the-arts/post-911-world-what-caused-the-rise-of-superhero-movies/  
+      <div id="closingblurb">
+        <p>
+          We hope you've enjoyed our exploration into cinematography with t-SNE. If you'd like to learn more about some of the topics we highlighted, feel free to visit some of our references on <a href="https://en.wikipedia.org/wiki/Sergio_Leone">Sergio Leone</a>, <a href="https://en.wikipedia.org/wiki/Spaghetti_Western">Spaghetti Westerns</a>, <a href="https://en.wikipedia.org/wiki/Harry_Potter">Harry Potter</a>, or <a href="http://highschool.latimes.com/orange-county-school-of-the-arts/post-911-world-what-caused-the-rise-of-superhero-movies/ ">the rise</a> of <a href="https://www.nyfa.edu/student-resources/the-rise-of-superhero-films/">superhero movies</a>. 
+        </p>
+        <p>
+          If you found some of the novel techniques used in this visualization interesting, be sure to checkout the work of Laurens van der Maaten with <a href="https://github.com/lvdmaaten/bhtsne">bht-SNE</a>, Kyle McDonald's work on <a href="https://github.com/kylemcdonald/Coloring-t-SNE">coloring t-SNE</a>, and <a href="https://en.wikipedia.org/wiki/K-means_clustering">kMeans</a> clustering.
+        </p>
+        <p>
+          If you'd like to revisit a decade, click one of the summaries below!
+        </p>
+      </div>
     </div>
     <div class="summary-container">
       <div class="summary-item" onclick="returnToDecade(1950)">
