--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
       </div>
       <div class="statement">
         <p>
-          World War (Closing of World War II)
+          World War II ended September 2, 1945. The war had a big impact on entertainment at that time, most films, radio stations, news paper articles were written realistically instead of for entertainment. During the war the only way most people could get information was by going to the cinemas to see educational films. Most of these films served to educate people on their countries war efforts and progress of the war. As you can see there are many movies that are based on World War II in the 50s.
         </p>
       </div>
       <div class="statement">
-        c
+        <p>
+        The 50s is often described using the word BOOM the economy boomed, it was the year of the Baby Boom, and cinema attendance Boomed all due to the end of WWII. The 50s films were greatly impacted by WWI, films were idealized with portrayals of the war and groups of people rebelling or going against authority. If you search ‘World War’ you will find all the movies made in the 50s about the war.
+        </p>
       </div>
       <div class="statement" id="graph1970">
         <p>
@@ -129,33 +131,44 @@
         </p>
       </div>
       <div class="statement">
-        Cluster of locations (the ones with Star Wars)
+        <p>
+          It is interesting to look at how t-SNE decides these movies are clustered together. Look at the highlighted cluster and see if you can notice a pattern? All of the movies that were clustered together happen to have a keyword or their title is about traveling or a location, some of the key words in this cluster include Cuba, Sea, and Space. Most of the movies in this cluster have other similarities as well, like a high rating or genre. 
+        </p>
       </div>
       <div class="statement">
-        g
+        <p>
+         You may start to notice that there is more variety in moves in this decade compaird to the last. Movies in the 70s started to diverge for the previous decades themes of noir and western, these new movies were all unique and creative. This divergence of movies can be attributed most to the new music being released and the hight of war and crime in the 70s. Different directors started to emerge (ex. Steven Spielberg) and began producing movies that were new and futuristic. The crime-drama genre was created and multitude of movies about crime and technology were released (ex. Star Wars and The Godfather). 
+        </p>
       </div>
       <div class="statement" id="graph1990">
         <p>
-          Space and Cold War
+          By time it was the 80’s the Soviets and America had been rivals for more than 30 years and relations between the two superpowers continued to deteriorate. While the war was still ramping up the so were the movies, the 80s were said to be the decade that introduced the idea of ‘high-concept’ films. The Cold War had a huge impact on movies in the 80’s causing may movies to revolve around the troubles and attitudes face while being at war.
         </p>
       </div>
       <div class="statement">
-        i
+        <p>
+          One of the main themes that can be tied to the Cold War are those movies involving outer space, like E.T and Star War. As the United States and Soviet Union were still in the Space Race at the time, movies involving space became extremely popular as you can see by the amout of movies highlighted. The Cold War can also be attributed to other big name movies made in the 80s such as Rocky IV which mirrors the conflict between the Soviet Union and United States by having an American boxer (Rocky) fight a Soviet boxer (Drago). 
+        </p>
       </div>
       <div class="statement">
-        j
+        <p>
+          The 80s were also known for ramping up the quality of movies. Film budgets skyrocketed, movie concepts became more complex and the term ‘blockbuster’ was introduced. With Hollywood's search for a ‘blockbuster’ movie that they thought everyone needed to see producers, studios and directors started to improve the quality of their movies. Some of these ‘blockbuster’ movies that were produced in the 80s are Raiders of the Lost Arc, Ghostbusters and Back to the Future, see if you can find some other blockbuster movies in the mix. 
+        </p>
       </div>
       <div class="statement" id="graph2000">
         <p>
-          Size affected by Rating Cluster of popular Upper Right green thingy
-          (pointer thingy here)
+         The 90s in cinema history is known as the decade of money, mega-spending, and special effects. While the 80s had begun to ramp up how movies were made the 90s took it even further. Ticket prices for movies when up, actors started getting payed more and movies were being sold more. ’Big hit’ movies increased and digital effects were pushed in this decade and sometimes storylines suffered due to the need for exciting looking movies.
         </p>
       </div>
       <div class="statement">
-        l
+       <p>
+        As explained before the size of the movie bubble is affected by the rating of the movie. Before the 90s most movies were mainly watched in the theaters, with very few homes having a VCR. In the 90s DVDs and home viewing had emerged helping to boost movie sales and ratings. Look at the movies that are in the highlighted areas, these are the highest rated movies in the 90s. Most of you probably remember having these movies on DVD and remember watching movies like Forrest Gump or the Titanic at home on the couch.
+       </p>
       </div>
       <div class="statement">
-        m
+       <p>
+        Because movies were now being sold and watched more the budgets for movies began to go up. CGI was becoming a big part of movies and actors were growing in popularity. Actors were beginning to get paid more, they were asking to change parts of the movies, and where their names would appear on the credits. Some of the highest paid stars of the 90s were: Arnold Schwarzenegger, Tom Cruise, Mel Gibson, Robin Williams, Julia Roberts, Bruce Willis and many more. Many of these actors are still superstars today such as Winona Ryder, who is now one of the main characters in the hit netflix show Stranger things. See if you can find movies that include popular actors that are not listed in this narrative? (hint there are at least 40 more)
+       </p>
       </div>
       <div class="statement" id="graph2010">
         <p>
