--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
-<script src="javascript/layout.js " type="text/javascript"></script>
-<script src="javascript/tSNE.js " type="text/javascript"></script>
-<script src="javascript/hexBin.js " type="text/javascript"></script>
+<script src="js/layout.js " type="text/javascript"></script>
+<script src="js/tSNE.js " type="text/javascript"></script>
+<script src="js/hexBin.js " type="text/javascript"></script>
 <script src="deps/graph-scroll/graph-scroll.js " type="text/javascript"></script>
 
 <head>
